fix projects overlap jsx & css module

--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,19 +1,20 @@
 .overlay {
-    transition: opacity 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0s, transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+  transition: opacity 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0s,
+    transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+}
+
+.descriptionWrapperRight,
+.descriptionWrapperLeft {
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .cover {
-    max-width: 400px;
-}
-
-.descriptionWrapperRight {
-    right: 15%;
-}
-
-.descriptionWrapperLeft {
-    left: 15%;
+  width: 400px;
+  height: auto;
+  display: block;
 }
 
 .description {
-    max-width: 370px;
+  max-width: 370px;
 }
